# Atmo-Desktop

./: .directory  CMakeLists.txt  INSTALL  NSE.conf  README.md  TODO  atmo.json  buttons.cpp  contentssize.cpp  defines.h  dsp.cpp  dsp.h  events.cpp  init.cpp  inputs.cpp  items.cpp  macmenu-dbus.h  macmenu.cpp  macmenu.h  namespace.h  nse.cpp  nse.h  ops.cpp  ops.h  overlay.cpp  overlay.h  panels.cpp  pixelmetric.cpp  polish.cpp  render.cpp  render.h  settings.h  sliders.cpp  stylehint.cpp  styleproject.cpp  styleproject.h  styleproject.json  styleproject.pro  styleproject.themerc  styleproject_global.h  (+2 more)
atmolib/: CMakeLists.txt  animhandler.cpp  animhandler.h  atmox11.h  color.cpp  color.h  debug.h  fx.cpp  fx.h  gfx.cpp  gfx.h  handlers.cpp  handlers.h  macmenu-dbus.h  macmenu.cpp  macmenu.h  macros.h  masks.cpp  masks.h  ops.cpp  ops.h  progresshandler.cpp  progresshandler.h  qtx11extras_compat.h  shadowhandler.cpp  shadowhandler.h  shadows.cpp  shadows.h  shapes.cpp  shapes.h  stackanimator.cpp  stackanimator.h  titlewidget.cpp  titlewidget.h  toolbarhelpers.cpp  toolbarhelpers.h  widgets.cpp  widgets.h  windowdata.cpp  windowdata.h  (+4 more)
config/: CMakeLists.txt  config.ui  main.cpp  settings.cpp  settings.h  styleconfig.cpp  styleconfig.h
examples/: CMakeLists.txt
examples/controls_demo/: CMakeLists.txt  main.cpp
kcm/: CMakeLists.txt  kcm_atmo.cpp  kcm_atmo.json
kwin/: CMakeLists.txt  atmo.json  button.cpp  button.h  decoadaptor.h  decobutton.cpp  decobutton.h  decorationshadowcache.cpp  decorationshadowcache.h  dsp.json  factory.cpp  factory.h  factorydbusadaptor.h  kdecoration_compat.h  kwinclient.cpp  kwinclient.h  kwinclient2.cpp  kwinclient2.h  menubar.cpp  menubar.h  sizegrip.cpp  sizegrip.h  styleproject.desktop  widgets.cpp  widgets.h  xcbatoms.cpp  xcbatoms.h
kwin/effects/: CMakeLists.txt
kwin/effects/shapecorners/: CMakeLists.txt  shapecorners.cpp  shapecorners.h  shapecorners.json
kwin/effects/shapecorners/shaders_110/: shapecorners.frag
kwin/effects/shapecorners/shaders_140/: shapecorners.frag
manager/: CMakeLists.txt  main.cpp
stylelib/: CMakeLists.txt  animhandler.cpp  animhandler.h  color.cpp  color.h  fx.cpp  fx.h  gfx.cpp  gfx.h  handlers.cpp  handlers.h  macmenu.cpp  macmenu.h  macros.h  masks.cpp  masks.h  ops.cpp  ops.h  progresshandler.cpp  progresshandler.h  render.cpp  render.h  settings.cpp  settings.h  shadowhandler.cpp  shadowhandler.h  shadows.cpp  shadows.h  shapes.cpp  shapes.h  stackanimator.cpp  stackanimator.h  titlewidget.cpp  titlewidget.h  toolbarhelpers.cpp  toolbarhelpers.h  unohandler.cpp  unohandler.h  widgets.cpp  widgets.h  (+6 more)
tools/licensing/headers/: atmo_gpl_header.txt
